## Process this file with automake to produce Makefile.in

SUBDIRS = libxml++ docs scripts examples MSVC_Net2005 MSVC_Net2008

EXTRA_DIST = libxml++-2.6.pc.in libxml++.spec.in

DIST_SUBDIRS = $(SUBDIRS)

# Install the pkg-config file:
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libxml++-2.6.pc


